--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ li button.delete:hover {
       padding: 20px;
       box-shadow: #060606;
       background-color: #ffffff;
-      color: #060606;
+      color: #fa0606;
       border-radius: 8px;
       margin-bottom: 280px;
 }
@@ -160,8 +160,8 @@ li button.delete:hover {
 }
 
 .todo-button {
-  padding: 10px;
-  font-size: 16px;
+  padding: 15px;
+  font-size: 26px;
   cursor: pointer;
   background-color: #007bff;
   color: #fff;
