--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .container {
   text-align: center;
   background-color: #fff;
-  padding: 20px;
+  padding: 30px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(151, 49, 49, 0.1);
 }
@@ -143,7 +143,7 @@ li button.delete:hover {
       background-color: #ffffff;
       color: #fa0606;
       border-radius: 8px;
-      margin-bottom: 280px;
+      margin-bottom: 210px;
 }
 
 
@@ -172,4 +172,21 @@ li button.delete:hover {
 
 .todo-button:hover {
   background-color: #f60606;
+}
+
+.complete-checkbox {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #ff0000; /* Change the border color */
+  border-radius: 4px;
+  outline: none;
+  transition: background-color 0.3s ease;
+}
+
+.complete-checkbox:checked {
+  background-color: #f20804; /* Change the background color when checked */
+  border-color: #ff0000; /* Change the border color when checked */
 }
