--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ li button.delete:hover {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   display: inline-block;
   padding: 20px;
-  box-shadow: #060606;
+  box-shadow: 0 0 20px rgb(57, 3, 3);
   background-color: #ffffff;
   color: #fa0606;
   border-radius: 8px;
@@ -158,7 +158,6 @@ li button.delete:hover {
   margin-top: -6px;
   border-width: 6px;
   border-style: solid;
-  box-shadow: #060606;
   border-color: transparent transparent transparent #fafafa;
 }
 
@@ -196,7 +195,7 @@ li button.delete:hover {
 }
 
 .complete-checkbox::before {
-  content: '\2713'; /* Unicode checkmark character */
+  content: '\2713'; 
   font-size: 16px;
   color: #f1f1f1;
   position: absolute;
