--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ li button.delete:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  line-height: 2;
 }
 
 .todo-container {
@@ -139,15 +140,16 @@ li button.delete:hover {
 
 .speech {
   position: relative;
-  font-size: x-large;
+  font-size: 28px; 
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   display: inline-block;
   padding: 20px;
-  box-shadow: 0 0 20px rgb(57, 3, 3);
+  box-shadow: #060606;
   background-color: #ffffff;
   color: #fa0606;
   border-radius: 8px;
   margin-bottom: 210px;
+  max-width: 300px;
 }
 
 .speech::after {
@@ -158,6 +160,7 @@ li button.delete:hover {
   margin-top: -6px;
   border-width: 6px;
   border-style: solid;
+  box-shadow: #060606;
   border-color: transparent transparent transparent #fafafa;
 }
 
